--- a/MouseGuard.csproj
+++ b/MouseGuard.csproj
@@ -13,4 +13,17 @@
     <PackageReference Include="System.Management" Version="9.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="MouseGuard.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <PropertyGroup>
+    <ApplicationIcon>MouseGuard.ico</ApplicationIcon>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
+
 </Project>
