Localization and new release workflow (#1)
* Add localization support files for German and Spanish languages;

* Refactor to use localized strings

* Mark localization/multi-language support as complete in README

* Add application icon and About dialog to the tray menu

* Add initial implementation of MouseGuard application with build and release workflow

- Implemented core functionality to block mouse cursor from entering a selected screen.
- Added system tray icon with context menu for screen selection.
- Configured global hotkey for enabling/disabling blocking.
- Created README with usage instructions and features.
- Added localization support with resource files for English, German, and Spanish.
- Included .gitignore for Visual Studio and build artifacts.
- Set up GitHub Actions workflow for automated build and release on merge to master.

--- a/MouseGuard.csproj
+++ b/MouseGuard.csproj
@@ -13,4 +13,18 @@
     <PackageReference Include="System.Management" Version="9.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="MouseGuard.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <PropertyGroup>
+    <ApplicationIcon>MouseGuard.ico</ApplicationIcon>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Version>1.0.2</Version>
+    <AppName>MouseGuard</AppName>
+  </PropertyGroup>
+
 </Project>
