Localization and workflow to build release (#3)
* Add localization support files for German and Spanish languages;

* Refactor to use localized strings

* Mark localization/multi-language support as complete in README

* Add application icon and About dialog to the tray menu

* Add initial implementation of MouseGuard application with build and release workflow

- Implemented core functionality to block mouse cursor from entering a selected screen.
- Added system tray icon with context menu for screen selection.
- Configured global hotkey for enabling/disabling blocking.
- Created README with usage instructions and features.
- Added localization support with resource files for English, German, and Spanish.
- Included .gitignore for Visual Studio and build artifacts.
- Set up GitHub Actions workflow for automated build and release on merge to master.

* Bump version to 1.0.2 and clean up unused using directives in Program.cs

* Update workflow to run on Windows and bump version to 1.0.3

* fix: GitHub Actions workflow to use PowerShell

---------

Co-authored-by: Paul Sturm <paul.sturm@cotton-software.com>

--- a/.github/workflows/release-on-merge.yml
+++ b/.github/workflows/release-on-merge.yml
@@ -26,11 +26,13 @@ jobs:
 
       - name: Extract App Name and Version from .csproj
         id: extract_metadata
+        shell: pwsh
         run: |
-          APP_NAME=$(grep -oPm1 "(?<=<AppName>)[^<]+" MouseGuard.csproj)
-          VERSION=$(grep -oPm1 "(?<=<Version>)[^<]+" MouseGuard.csproj)
-          echo "APP_NAME=$APP_NAME" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          $csprojContent = Get-Content -Path "MouseGuard.csproj"
+          $appName = ($csprojContent | Select-String -Pattern '<AppName>(.*?)</AppName>' -AllMatches).Matches.Groups[1].Value
+          $version = ($csprojContent | Select-String -Pattern '<Version>(.*?)</Version>' -AllMatches).Matches.Groups[1].Value
+          echo "APP_NAME=$appName" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       # Create a GitHub Release
       - name: Create Release
