--- a/.github/workflows/release-on-merge.yml
+++ b/.github/workflows/release-on-merge.yml
@@ -1,5 +1,6 @@
 name: Build and Release on Merge to Master
 
+
 on:
   push:
     branches:
@@ -43,4 +44,4 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
