--- a/.github/workflows/release-on-merge.yml
+++ b/.github/workflows/release-on-merge.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: v${{ env.VERSION }}
           name: ${{ env.APP_NAME }} v${{ env.VERSION }}
           draft: false
           prerelease: false
