feat: add GitHub Actions workflow for .NET build and test coverage; implement unit tests for DisplayUtil and HotkeyUtil

--- a/MouseGuard.csproj
+++ b/MouseGuard.csproj
@@ -27,8 +27,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.8</Version>
+    <Version>1.1.0.1</Version>
     <AppName>MouseGuard</AppName>
   </PropertyGroup>
+
+  <!-- Exclude test project files from the main project's default compile include -->
+  <ItemGroup>
+    <Compile Remove="MouseGuard.Tests\**\*.cs" />
+  </ItemGroup>
 
 </Project>
